Wrap side bar buttons and images to fix placement

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,3 @@
 	grid-row: 2 / 3;
 }
 
-.side-btn {
-	display: block;
-}
-
